style(css): fix collapsing issue

--- a/css/style.css
+++ b/css/style.css
@@ -94,13 +94,14 @@ h1.book-title + span {
 }
 
 div.jumbotron {
-    height: 750px;
+    height: 100%;
     background-size: cover;
     background-image:url(../images/mountains.jpg);
     background-position: center;
     background-repeat: no-repeat;
     text-align: left;
     margin-bottom: 0;
+    padding: 3em 0 11em 0;
 }
 
 div.jumbotron > div {
